--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -154,7 +154,7 @@
   position: absolute;
   appearance: none;
   clip: rect(0 0 0 0);
-  width: 1px;
+  max-width: 1px;
   height: 1px;
   margin: -1px;
 
